[gd_scene load_steps=9 format=2]

[ext_resource path="res://Menus/StartMenu.gd" type="Script" id=1]
[ext_resource path="res://MenuFont.tres" type="DynamicFont" id=2]
[ext_resource path="res://TinyUnicode.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Assets/Sprites/sci_fi_bg1.jpg" type="Texture" id=4]
[ext_resource path="res://Assets/Sounds/Evade.wav" type="AudioStream" id=6]
[ext_resource path="res://Assets/Sounds/Menu Select.wav" type="AudioStream" id=7]

[sub_resource type="Theme" id=1]

[sub_resource type="DynamicFont" id=2]
size = 96
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[node name="StartMenu" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource( 1 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.533333, 0.555556 )
texture = ExtResource( 4 )
centered = false

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 398.0
margin_top = 217.0
margin_right = 626.0
margin_bottom = 383.0
alignment = 1

[node name="CenterContainer" type="CenterContainer" parent="CenterContainer/VBoxContainer"]
margin_right = 228.0
margin_bottom = 76.0

[node name="Title" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer"]
margin_right = 228.0
margin_bottom = 76.0
custom_colors/font_color = Color( 0.803922, 0.219608, 0.819608, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0.0470588, 0.917647, 0.00392157, 1 )
custom_fonts/font = SubResource( 2 )
text = "Ghostbot"
align = 1

[node name="CenterContainer2" type="CenterContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 80.0
margin_right = 228.0
margin_bottom = 166.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer/CenterContainer2"]
margin_left = 62.0
margin_right = 165.0
margin_bottom = 86.0

[node name="CenterContainer" type="CenterContainer" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer"]
margin_right = 103.0
margin_bottom = 26.0

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer"]
margin_right = 103.0
margin_bottom = 26.0

[node name="Selecter" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer/HBoxContainer"]
margin_right = 6.0
margin_bottom = 26.0
rect_min_size = Vector2( 6, 0 )
custom_fonts/font = ExtResource( 2 )
text = ">"

[node name="Option" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer/HBoxContainer"]
margin_left = 10.0
margin_right = 103.0
margin_bottom = 26.0
rect_min_size = Vector2( 93, 0 )
custom_fonts/font = ExtResource( 2 )
text = "Start"

[node name="CenterContainer2" type="CenterContainer" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer"]
margin_top = 30.0
margin_right = 103.0
margin_bottom = 56.0

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer2"]
margin_right = 103.0
margin_bottom = 26.0

[node name="Selecter" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer2/HBoxContainer"]
margin_right = 6.0
margin_bottom = 26.0
rect_min_size = Vector2( 6, 0 )
custom_fonts/font = ExtResource( 2 )
text = ">"

[node name="Option" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer2/HBoxContainer"]
margin_left = 10.0
margin_right = 103.0
margin_bottom = 26.0
rect_min_size = Vector2( 93, 0 )
custom_fonts/font = ExtResource( 2 )
text = "Options"

[node name="CenterContainer3" type="CenterContainer" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer"]
margin_top = 60.0
margin_right = 103.0
margin_bottom = 86.0
rect_min_size = Vector2( 62, 0 )

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer3"]
margin_right = 103.0
margin_bottom = 26.0

[node name="Selecter" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer3/HBoxContainer"]
margin_right = 6.0
margin_bottom = 26.0
rect_min_size = Vector2( 6, 0 )
custom_fonts/font = ExtResource( 2 )
text = ">"

[node name="Option" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer3/HBoxContainer"]
margin_left = 10.0
margin_right = 103.0
margin_bottom = 26.0
rect_min_size = Vector2( 93, 0 )
custom_fonts/font = ExtResource( 2 )
text = "Quit"

[node name="Sounds" type="Node" parent="."]

[node name="MenuSelect" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 7 )
volume_db = -5.0

[node name="MenuChoose" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 6 )
volume_db = -5.0
